<resources>
    <string name="login_login_title">登录</string>
    <string name="login_mobile_hint">手机号</string>
    <string name="login_pwd_hint">密码</string>
    <string name="login_forget_pwd">忘记密码？</string>
    <string name="login_use_third_account_login">使用第三方账号登陆</string>
    <string name="login_no_account">还没有账号？现在去</string>
    <string name="login_free_register"><u>免费注册</u></string>
    <string name="login_login_btn">登 录</string>
    <string name="login_input_empty_msg">手机号或密码不能为空</string>
    <string name="login_mobile_incorrect_format">手机号格式不正确</string>
    <string name="login_login_fail">登陆失败，请重试</string>

    <string name="login_register_title">注册</string>
    <string name="login_verify_code_hint">图形验证码</string>
    <string name="login_confirm_pwd_hint">密码确认</string>
    <string name="login_register_btn">注 册</string>
    <string name="login_register_agreement_before">点击注册默认您同意</string>
    <string name="login_register_agreement">《会员注册协议》</string>
    <string name="login_register_success">注册成功</string>
    <string name="login_register_fail">注册失败</string>
</resources>
